Finished first draft of intro, started on backstory, drew up map.

--- a/README
+++ b/README
@@ -1,9 +1,16 @@
 Pathfinder campaign:
 
+Change log:
+
+1/12/12
+-Finished Introduction
+-started Backstory
+-Added more landmarks to map
+
+
 TODO:
 
-Add Introduction
-Add Map Layout
+Finish Naming Cities and Landmarks
 Add City Description
 Add Faction Description
 Add Notable NPC's
