Added sections for People and finished names of places.

--- a/Places.tex
+++ b/Places.tex
@@ -8,61 +8,63 @@
 
 		\subsubsection{Hoath}
 	
-		\subsubsection{Town 1}
+		\subsubsection{Northrun}
 	
-		\subsubsection{Town 2}
+		\subsubsection{Algrem}
 
-	\subsection{The Empire}
+	\subsection{Ryujin "The Empire"}
 
-		\subsubsection{City 1}
+		\subsubsection{Okashu}
 
-		\subsubsection{City 2}
+		\subsubsection{Narahashi}
 
-		\subsubsection{City 3}
+		\subsubsection{Aohiro}
 	
-		\subsubsection{Town 1}
+		\subsubsection{Sakihiro}
 	
-		\subsubsection{Town 2}
+		\subsubsection{Fukuhashi}
 
-		\subsubsection{Town 3}
+		\subsubsection{Hamakoku}
 
-		\subsubsection{Town 4}
+		\subsubsection{Iwoyama}
 
-		\subsubsection{Town 5}
+		\subsubsection{Oshu}
 
-		\subsubsection{Town 6}
+		\subsubsection{Toyama}
 
 	\subsection{Wolf Island}
 
-		\subsubsection{City 1}
+		\subsubsection{Edgehaven}
 
-		\subsubsection{City 2}
+		\subsubsection{Hallowthicket}
 
-		\subsubsection{Town 1}
+		\subsubsection{Soluck}
 
-		\subsubsection{Town 2}
+		\subsubsection{Ilwarg}
 
-		\subsubsection{Town 3}
+		\subsubsection{Karmyrk}
 
-	\subsection{Island 1}
+	\subsection{Haunya}
 
-		\subsubsection{City 1}
+		\subsubsection{Xicxil}
 	
-		\subsubsection{City 2}
+		\subsubsection{Takas}
 	
-		\subsubsection{City 3}
+		\subsubsection{N'Gulonga}
 	
-		\subsubsection{Town 1}
+		\pagebreak
 
-		\subsubsection{Town 2}
+		\subsubsection{Tueha}
 
-		\subsubsection{Town 3}
+		\subsubsection{Totzal}
 
-		\subsubsection{Town 4}
+		\subsubsection{Yaiji}
 
-		\subsubsection{Town 5}
+		\subsubsection{Aztath}
 
-		\subsubsection{Town 6}
+		\subsubsection{Mattu}
+
+		\subsubsection{Kingali}
 
 	\subsection{Ko' Rau}
 
@@ -70,25 +72,32 @@
 
 		\subsubsection{Iron Citadel}
 
-		\subsubsection{Outpost 1}
+		\subsubsection{Teroia}
 
 	\subsection{Southern Continent}
 
-		\subsubsection{The Bluffs}
+		\subsubsection{Irondale}
 
 		\subsubsection{Land's End}
 
-		\subsubsection{The Plateu}
+		\subsubsection{Higharce}
 	
-		\subsubsection{Town 1}
+		\subsubsection{Darldour}
 
-		\subsubsection{Town 2}
+		\subsubsection{Tonsheim}
 
-		\subsubsection{Town 3}
+		\subsubsection{Fagervik}
 
 	\subsection{Sunken Cities}
 
 		\subsubsection{Atlas}
 
 		\subsubsection{Aquarius}
+	
+	\subsection{Notable Landmarks}
 
+		\subsubsection{The Bluffs}
+		
+		\subsubsection{The Grand Library}
+
+		\subsubsection{The Deeps}
