--- a/Title.tex
+++ b/Title.tex
@@ -1,4 +1,5 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
+\usepackage{fullpage}
 
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1pt\hfill \kern \z@}
@@ -35,6 +36,7 @@
 
 \begin{document}
 \maketitle
-\include{Intro}
-\include{Places}
+\input{Intro}
+\input{Places}
+\input{People}
 \end{document}
