--- a/README
+++ b/README
@@ -3,14 +3,18 @@ Pathfinder campaign:
 Change log:
 
 1/12/12
--Finished Introduction
--started Backstory
+-Fist draft of  Introduction
+-Started Backstory
 -Added more landmarks to map
 
+1/13/12
+-Finished naming towns as well as a few landmarks
+-Started to add names to some the important NPCs and factions
 
 TODO:
 
-Finish Naming Cities and Landmarks
+Add Map picture
+Finish Backstory
 Add City Description
 Add Faction Description
 Add Notable NPC's
