--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Pathfinder campaign:
 Change log:
 
 1/12/12
--Fist draft of  Introduction
+-First draft of  Introduction
 -Started Backstory
 -Added more landmarks to map
 
