Finished portions of the background story as well as names for some groups. Finished naming places.

--- a/Intro.tex
+++ b/Intro.tex
@@ -9,7 +9,40 @@ motivations, possible quests and important NPCs that the party could encounter o
 their adventure.  Due to the size of the map and openness of the storyline, the 
 DM will have to fill in many of the blanks.
 
-\section{Back-story}
+\section{Background}
 
 A vast ocean encompasses most of the world, and autonomous city-states rule over
-what land there is.  
+what land there is.  The city-state of Antioc, the Empire of Ryujin and the Dwarven
+stronghold of Irondale rule most of the world around them.  Few places around the 
+world fall outside their spheres of influence, whether it's to do with the 
+location or to affiliations with other groups.  
+
+The city-state of Antioc sits on the smallest island in the area, Grindstone Island,
+however due to its central location, the city has become rich and powerful.  Antioc
+controls most of the trade routes, and serves as a convenient stop for ships 
+traveling to other ports.  Archbishop-General Augustus XVII rules over Antioc and 
+its colonies, as both the head of the Order of Imodae and the Antiocan military,
+Augustus holds supreme rule.  Antioc controls the city of N'Gulonga, which serves 
+as a stop for ships bound for the Temple of Imodae to the far north.  The leaders 
+of Grindstone Island brokered a deal with the Jade Lady, Empress of Ryjin, allowing
+for trade between the two nations.  With this agreement Antioc gained influence 
+over trade routes between all the other nations.
+
+The Empire of Ryujin lies to the east of Grindstone Island.  Ryujin maintains a
+constant state of isolationism, interacting with the other states only when
+necessary.  The walled port of Okashu remains the only city where foreigners may
+enter the country, and to travel outside its walls requires express permission 
+from the Jade Lady.  As with all things people do not understand, the people
+ from the Empire are shrouded in lore and superstition, fighters that can disappear 
+into nothingness, warriors that can scare off the most fiendish of beasts and
+men that can kill with only a touch.  Very few outsiders are allowed into the 
+country and even fewer have seen the Imperial City.  To the north and south of 
+Okashu sits Narahashi and Aohiro, respectively.  From these fortressed cities the 
+Empire keeps a close watch over all traffic in and out of Okashu.  Ships accused
+of smuggling contraband to Okashu are never seen again.  
+
+To the north-west of Grinstone sits Wolf Island, home of the Elvan city of 
+Edgehaven. The island has long been coveted for its large old growth forests and 
+rich soil.  However the Elvan tribunal know as The Masked Ones and their enforcers
+the Order of Gozreh, forbid the taking of natural resources for profit.  Due to
+its location and  
