--- a/People.tex
+++ b/People.tex
@@ -4,17 +4,27 @@
 
 		\subsubsection{Augustus XVII}
 
-		\subsubsection{The Tribunal}
+		\subsubsection{The Masked Ones}
 
 		\subsubsection{Faust}
+
+		\subsubsection{King Faerlag}
+
+		\subsubsection{The Jade Lady}
 
 	\subsection{Groups and Factions}
 
 		\subsubsection{The Iron Band}
 
-		\subsubsection{Antioc Guard}
-
 		\subsubsection{Red Wizards}
 	
 		\subsubsection{Knights of Imodae}
+
+		\subsubsection{Knights of the Relic}
+
+		\subsubsection{Order of Gozreh}
+
+		\subsubsection{Lords of the Solid Hand}
+
+		\subsubsection{The Keepers}
 
