--- a/Places.tex
+++ b/Places.tex
@@ -12,7 +12,7 @@
 	
 		\subsubsection{Algrem}
 
-	\subsection{Ryujin "The Empire"}
+	\subsection{Ryujin}
 
 		\subsubsection{Okashu}
 
@@ -44,6 +44,8 @@
 
 		\subsubsection{Karmyrk}
 
+		\subsubsection{Sokin}
+
 	\subsection{Haunya}
 
 		\subsubsection{Xicxil}
@@ -52,8 +54,6 @@
 	
 		\subsubsection{N'Gulonga}
 	
-		\pagebreak
-
 		\subsubsection{Tueha}
 
 		\subsubsection{Totzal}
@@ -80,11 +80,13 @@
 
 		\subsubsection{Land's End}
 
-		\subsubsection{Higharce}
+		\subsubsection{Highacre}
 	
 		\subsubsection{Darldour}
 
 		\subsubsection{Tonsheim}
+
+		\subsubsection{Osstrom}
 
 		\subsubsection{Fagervik}
 
