--- a/README
+++ b/README
@@ -10,6 +10,7 @@ Change log:
 1/13/12
 -Finished naming towns as well as a few landmarks
 -Started to add names to some the important NPCs and factions
+-Finished portion of background story (mostly overview of different places)
 
 TODO:
 
