Updated pdf file. Also finished first draft of the background.

--- a/Intro.tex
+++ b/Intro.tex
@@ -21,9 +21,9 @@ The city-state of Antioc sits on the smallest island in the area, Grindstone Isl
 however due to its central location, the city has become rich and powerful.  Antioc
 controls most of the trade routes, and serves as a convenient stop for ships 
 traveling to other ports.  Archbishop-General Augustus XVII rules over Antioc and 
-its colonies, as both the head of the Order of Imodae and the Antiocan military,
+its colonies, as both the head of the Order of Iomedae and the Antiocan military,
 Augustus holds supreme rule.  Antioc controls the city of N'Gulonga, which serves 
-as a stop for ships bound for the Temple of Imodae to the far north.  The leaders 
+as a stop for ships bound for the Temple of Iomedae to the far north.  The leaders 
 of Grindstone Island brokered a deal with the Jade Lady, Empress of Ryjin, allowing
 for trade between the two nations.  With this agreement Antioc gained influence 
 over trade routes between all the other nations.
@@ -45,4 +45,43 @@ To the north-west of Grinstone sits Wolf Island, home of the Elvan city of
 Edgehaven. The island has long been coveted for its large old growth forests and 
 rich soil.  However the Elvan tribunal know as The Masked Ones and their enforcers
 the Order of Gozreh, forbid the taking of natural resources for profit.  Due to
-its location and  
+its stance on harvesting natural resources tension continues between Edgehaven and 
+Antioc, who would like to use the rich resources of Wolf Island to further expand
+their wealth and influence.  Apart from the distrust between the two city-states
+Edgehaven keeps a low profile, partly due to its focus on maintaining the Dark 
+Woods, an old growth forest covering most of the island.
+
+Haunya, the largest island, sits just to the west of Wolf Island.  Once home to
+an ancient civilization, small tribes and ports controlled by brigands and out--
+laws litter the island.  The largest cities, Xicxil and N'Gulonga, are located on
+the southern and northern coasts, respectively.  N'Gulonga, a smaller port city,
+acts as a vital life line into Ko' Rau, supplying the Temple of Iomedae with anything
+the Knights require.  Xicxil, built on the ruins of a ancient city, has become
+to the more unsavory characters.  Pirates, thieves and outlaws fine a home and
+protection from outside persecution.  Home to the thieves guild, the city functions
+with relative peace, due to the strict code of conduct enforced by the guild.
+
+To the north of the ocean exists Ko' Rau, the Scorched Land, once a prosperous and 
+fertile land, now charred, cursed and abandoned by all but the most foolhardy.  Now
+home to devils, demons and all manner of foul beasts, the continent spews forth 
+a never ending army of horrors.  The only known settlement is the Temple of Iomedae,
+home to the Knights of Iomedae, men and women that have dedicated their life to 
+the eradication of the demonic forces.  Once a year on the Fall Equinox, Ko' Rau 
+bursts into a hellish blaze, and the frequency of demonic encounters increases.
+
+\section{Background}
+
+For the past couple decades the Dark Continent of Ko' Rau, has birth the most
+disturbing horrors the world has ever seen.  Every year the army of hell-spawn
+grows in size and territory.  At first the holy knights from Antioc were enough
+to contain the spread, but now demons and other unholy blights have appeared in 
+greats plains of Haunya and hiding in the Dark Woods of Wold Island.  Fearing 
+whats to come in the next couple years, Archbishop-General Augustus XVII has 
+beseeched the other nations to send anyone they can to be apart of a coalition 
+tasked with finding the reason for and stopping the yearly firestorm in the North.
+Since the plea for help went out, people from all over the world have travelled 
+to Antioc to take lend their strength in order to put an end to the phenomenon.
+
+The adventuring party may have many origins, however they should eventually 
+come to Antioc and become authorized as official participants in the campaign.
+
