--- a/Places.tex
+++ b/Places.tex
@@ -56,6 +56,8 @@
 	
 		\subsubsection{Tueha}
 
+		\pagebreak
+
 		\subsubsection{Totzal}
 
 		\subsubsection{Yaiji}
@@ -68,7 +70,7 @@
 
 	\subsection{Ko' Rau}
 
-		\subsubsection{Temple of Imodae}
+		\subsubsection{Temple of Iomedae}
 
 		\subsubsection{Iron Citadel}
 
@@ -103,3 +105,5 @@
 		\subsubsection{The Grand Library}
 
 		\subsubsection{The Deeps}
+
+		\pagebreak
