--- a/README
+++ b/README
@@ -12,10 +12,13 @@ Change log:
 -Started to add names to some the important NPCs and factions
 -Finished portion of background story (mostly overview of different places)
 
+1/20/12
+-Finished first draft of background
+-Started backstory
+
 TODO:
 
 Add Map picture
-Finish Backstory
 Add City Description
 Add Faction Description
 Add Notable NPC's
