--- a/People.tex
+++ b/People.tex
@@ -12,13 +12,41 @@
 
 		\subsubsection{The Jade Lady}
 
+	\subsection{Minor NPCs}
+
+		\subsubsection{The Man in Red}
+
+		Once a Red Wizard, he has been banished from the Iron Citadel
+		for speaking out against the yearly rituals and now lives atop
+		a mountain on Haunya.  The local goblin tribe have adopted his
+		Iron Band tattoo as their new crest and revere him as a wise 
+		and powerful man.  Since the goblins live close to a mountain
+		pass used frequently by the Thieves Guild as a smuggling route,
+		they now raid carrivans, hoping to catch a group transporting
+		some of the relics necessary for the Fires of Dis ritual.  He
+		can grant the party information or even a boon depending on how
+		he likes or gets a long with them.  A percentile or diplomacy 
+		check to decide. 
+
+		\begin{tabular}{r | c | l}
+			\textsc{Boons}
+			\hline
+			1\%-25\% & DC <10 & He treats the party with indifference 
+					or even as interupting intruders. Offers
+					no important information about himself or
+					the Red Wizards. \\
+			26\%-50\% & DC 20 & He might tell the party about the Red
+					Wizards as well as his own story of exile.
+			
+
+
 	\subsection{Groups and Factions}
 
 		\subsubsection{The Iron Band}
 
 		\subsubsection{Red Wizards}
 	
-		\subsubsection{Knights of Imodae}
+		\subsubsection{Knights of Iomedae}
 
 		\subsubsection{Knights of the Relic}
 
