Changed second background section to backstory

--- a/Intro.tex
+++ b/Intro.tex
@@ -69,7 +69,7 @@ home to the Knights of Iomedae, men and women that have dedicated their life to
 the eradication of the demonic forces.  Once a year on the Fall Equinox, Ko' Rau 
 bursts into a hellish blaze, and the frequency of demonic encounters increases.
 
-\section{Background}
+\section{Backstory}
 
 For the past couple decades the Dark Continent of Ko' Rau, has birth the most
 disturbing horrors the world has ever seen.  Every year the army of hell-spawn
