Flushed out details for some of the towns. Also fixed spelling mistakes in first draft of intro. Was able to add two more important places to the world map.

--- a/People.tex
+++ b/People.tex
@@ -7,16 +7,16 @@
 		\subsubsection{The Masked Ones}
 
 		\subsubsection{Faust}
-
+			
 		\subsubsection{King Faerlag}
 
 		\subsubsection{The Jade Lady}
 
 	\subsection{Minor NPCs}
 
-		\subsubsection{The Man in Red}
+		\subsubsection{Andor, The Man in Red}
 
-		Once a Red Wizard, he has been banished from the Iron Citadel
+		Once a Red Wizard, Andor has been banished from the Iron Citadel
 		for speaking out against the yearly rituals and now lives atop
 		a mountain on Haunya.  The local goblin tribe have adopted his
 		Iron Band tattoo as their new crest and revere him as a wise 
@@ -28,17 +28,20 @@
 		he likes or gets a long with them.  A percentile or diplomacy 
 		check to decide. 
 
-		\begin{tabular}{r | c | l}
-			\textsc{Boons}
-			\hline
-			1\%-25\% & DC <10 & He treats the party with indifference 
-					or even as interupting intruders. Offers
-					no important information about himself or
-					the Red Wizards. \\
-			26\%-50\% & DC 20 & He might tell the party about the Red
-					Wizards as well as his own story of exile.
-			
-
+		\textsc{Boons}
+		\begin{tabular}{| r | c | l}
+			1\%-50\% & DC 15 & He treats the party with indifference 
+						or even as interupting intruders. \\
+ 					& & Offers no important information about 
+						himself or the Red Wizards. \\
+			51\%-75\% & DC 25 & He might tell the party about the Red
+						Wizards as well as his own story \\ 
+					& & 	of exile. \\
+			76\%-100\% & DC 35 & Tells the party of the Fires of Dis 
+						ritual and gives the party a letter of \\
+					& &	introduction to help them find people 
+						involved with the ritual. \\ 		
+		\end{tabular}
 
 	\subsection{Groups and Factions}
 
