--- a/Places.tex
+++ b/Places.tex
@@ -53,10 +53,26 @@
 		\subsubsection{Takas}
 	
 		\subsubsection{N'Gulonga}
+
+		A port city on the northern coast of Haunya, N'Gulonga has grown 
+		in importance since the Northern Fires started.  With its proximity
+		to Ko' Rau, the city has become a popular destination for adventurers
+		on expeditions into the Burning North.  The port teems with all
+		manner of travelers, merchants and adventurers, some heading into 
+		the northern continent, others carrying goods to the Temple of 
+		Iomedae.  Even though the Knights of the Relic rule over the city,
+		trade on the black market continues to grow.  In recent years, the 
+		unsavory trade of undead, devils and demons developed into a major 
+		business.  
+
+			\paragraph{NPCs}
+				
+			
+			\paragraph{Shops}
+
+			\paragraph{Encounters}
 	
 		\subsubsection{Tueha}
-
-		\pagebreak
 
 		\subsubsection{Totzal}
 
@@ -64,6 +80,46 @@
 
 		\subsubsection{Aztath}
 
+		A small farming village at the edge of the great plains; this small 
+		settlement is a frequent stop for merchant trains traveling between 
+		Xicxil and N'Gulonga.  Due to its location, Aztath offers several 
+		places for travelers to rest, resupply and repair equipment.  
+
+			\paragraph{NPCs}
+			
+				\begin{itemize}
+					\item \textsc{Cassandra}: A middle aged elf that runs 
+							errands for the local tavern and inn.
+							A self taught bard and archivist, she
+							is able to point the party to most of
+							the local goings on.  Keeps her precious
+							records in the storeroom under the
+							general store. 
+					\item \textsc{Talas}: The young owner of the local
+							general store, General Goods, acts as a 
+							go between for clients and the thieves 
+							guild.  Not a malicious individual,
+							usually offers his services to people he
+							knows and trusts.  Locals go to him whenever 
+							they need specialty goods and respect him
+							for being able to get almost anything.  
+				\end{itemize}
+			\paragraph{Shops}
+
+				\begin{itemize}
+					\item \textsc{Lyon's Gate}
+					\item \textsc{S}
+					\item \textsc{General Goods}
+					\item \textsc{Blacksmith}
+					\item \textsc{Tanner}
+				\end{itemize}
+
+			\paragraph{Encounters}
+				\begin{itemize}
+					\item Merchants traveling between N'Gulonga
+						and Xicxil.
+				\end{itemize}
+				
 		\subsubsection{Mattu}
 
 		\subsubsection{Kingali}
@@ -106,4 +162,29 @@
 
 		\subsubsection{The Deeps}
 
-		\pagebreak
+		\subsubsection{Shifting Sands}
+		
+		In the middle of the Great Plains of Haunya, sleeps one of the
+		worlds largest deserts. At least a weeks travel from end to end,
+		few people who venture into the desert unprepared reach their 
+		destination.  Resourceful nomads, roaming djinn and a few other
+		tribes call the Sands home.  Most of the tribes know how difficult
+		travel through the desert can be and treat all they meet with 
+		unending hospitality, though others will defend their ancient 
+		homeland to the death.  A perpetual sandstorm whirls around the
+		center of the desert, guarding sunken city, Ubar or Iram of the 
+		Pillars.  The legendary City of Brass, home to the djinn and
+		efreeti, contains wonders and artifacts few have laid eyes upon
+		in the past century.  
+
+		\paragraph{Encounters}
+			\begin{itemize}
+				\item Groups of Djinn
+				\item Groups of Div
+				\item Other travelers
+				\item Oasis 
+				\item Nomads
+				\item Desert giants
+			\end{itemize}
+		
+		\paragraph{Ubar, The City of Brass}
