--- a/README
+++ b/README
@@ -16,10 +16,15 @@ Change log:
 -Finished first draft of background
 -Started backstory
 
+1/26/12
+-Added more detail to N'Gulonga, Aztath, and the Great Plains
+-Added Iram of the Pillars and the Shifting Sands to the list of places.
+-Changed format for town description to description, NPC, Shops, and Encounters
+
 TODO:
 
 Add Map picture
-Add City Description
+Add City Descriptions
 Add Faction Description
 Add Notable NPC's
 Add Boss Encounters
