--- a/Intro.tex
+++ b/Intro.tex
@@ -3,19 +3,19 @@
 Welcome to The Scorched Land campaign setting.  The following chapters will lay 
 out the most important aspects of this world, however the DM is encouraged to 
 alter the setting to fit their groups play style and goals.  Hopefully this document
-will be helpful for those first starting to DM and to those that are veterans
-alike.  In the following pages, I will attempt to cover all of back-story, party
-motivations, possible quests and important NPCs that the party could encounter on 
-their adventure.  Due to the size of the map and openness of the storyline, the 
-DM will have to fill in many of the blanks.
+will be helpful to beginner and veteran DMs alike.  In the following pages, I will 
+attempt to cover all of back-story, party motivations, possible quests and important
+NPCs that the party could encounter on their adventure.  Due to the size of the 
+map and openness of the storyline, the DM will have the opportunity to fill in 
+many of the blanks.
 
 \section{Background}
 
-A vast ocean encompasses most of the world, and autonomous city-states rule over
+A vast ocean encompasses most of the world, while autonomous city-states rule over
 what land there is.  The city-state of Antioc, the Empire of Ryujin and the Dwarven
 stronghold of Irondale rule most of the world around them.  Few places around the 
-world fall outside their spheres of influence, whether it's to do with the 
-location or to affiliations with other groups.  
+world fall outside their spheres of influence, due to location or to affiliations 
+with other groups.
 
 The city-state of Antioc sits on the smallest island in the area, Grindstone Island,
 however due to its central location, the city has become rich and powerful.  Antioc
@@ -24,16 +24,16 @@ traveling to other ports.  Archbishop-General Augustus XVII rules over Antioc an
 its colonies, as both the head of the Order of Iomedae and the Antiocan military,
 Augustus holds supreme rule.  Antioc controls the city of N'Gulonga, which serves 
 as a stop for ships bound for the Temple of Iomedae to the far north.  The leaders 
-of Grindstone Island brokered a deal with the Jade Lady, Empress of Ryjin, allowing
+of Grindstone Island brokered a deal with the Jade Lady, Empress of Ryujin, allowing
 for trade between the two nations.  With this agreement Antioc gained influence 
 over trade routes between all the other nations.
 
-The Empire of Ryujin lies to the east of Grindstone Island.  Ryujin maintains a
+The Empire of Ryujin lies to the east of Grindstone Island; Ryujin maintains a
 constant state of isolationism, interacting with the other states only when
 necessary.  The walled port of Okashu remains the only city where foreigners may
 enter the country, and to travel outside its walls requires express permission 
 from the Jade Lady.  As with all things people do not understand, the people
- from the Empire are shrouded in lore and superstition, fighters that can disappear 
+from the Empire are shrouded in lore and superstition: fighters that can disappear 
 into nothingness, warriors that can scare off the most fiendish of beasts and
 men that can kill with only a touch.  Very few outsiders are allowed into the 
 country and even fewer have seen the Imperial City.  To the north and south of 
@@ -41,7 +41,7 @@ Okashu sits Narahashi and Aohiro, respectively.  From these fortressed cities th
 Empire keeps a close watch over all traffic in and out of Okashu.  Ships accused
 of smuggling contraband to Okashu are never seen again.  
 
-To the north-west of Grinstone sits Wolf Island, home of the Elvan city of 
+To the north-west of Grindstone sits Wolf Island, home of the Elvan city of 
 Edgehaven. The island has long been coveted for its large old growth forests and 
 rich soil.  However the Elvan tribunal know as The Masked Ones and their enforcers
 the Order of Gozreh, forbid the taking of natural resources for profit.  Due to
@@ -57,7 +57,7 @@ laws litter the island.  The largest cities, Xicxil and N'Gulonga, are located o
 the southern and northern coasts, respectively.  N'Gulonga, a smaller port city,
 acts as a vital life line into Ko' Rau, supplying the Temple of Iomedae with anything
 the Knights require.  Xicxil, built on the ruins of a ancient city, has become
-to the more unsavory characters.  Pirates, thieves and outlaws fine a home and
+to the more unsavory characters.  Pirates, thieves and outlaws find a home and
 protection from outside persecution.  Home to the thieves guild, the city functions
 with relative peace, due to the strict code of conduct enforced by the guild.
 
@@ -71,11 +71,11 @@ bursts into a hellish blaze, and the frequency of demonic encounters increases.
 
 \section{Backstory}
 
-For the past couple decades the Dark Continent of Ko' Rau, has birth the most
+For the past couple decades the Dark Continent of Ko' Rau, has birthed the most
 disturbing horrors the world has ever seen.  Every year the army of hell-spawn
 grows in size and territory.  At first the holy knights from Antioc were enough
 to contain the spread, but now demons and other unholy blights have appeared in 
-greats plains of Haunya and hiding in the Dark Woods of Wold Island.  Fearing 
+greats plains of Haunya and hiding in the Dark Woods of Wolf Island.  Fearing 
 whats to come in the next couple years, Archbishop-General Augustus XVII has 
 beseeched the other nations to send anyone they can to be apart of a coalition 
 tasked with finding the reason for and stopping the yearly firestorm in the North.
@@ -84,4 +84,14 @@ to Antioc to take lend their strength in order to put an end to the phenomenon.
 
 The adventuring party may have many origins, however they should eventually 
 come to Antioc and become authorized as official participants in the campaign.
+As members of the coalition, the party gains some boons.
+
+	\begin{itemize}
+		\item \textsc{Bronze Token}: Allows the party to stay at any
+			barracks controlled by the Knights of the Relic.
+		\item 2 \textsc{Potion of Cure Light Wounds}
+	\end{itemize}
+
+Party contains a member of the Knights of Antioc, the group may also purchase
+or borrow adventuring gear for the Knights' quartermaster.  
 
