Added more detail to the N'Gulonga entry in Places.tex

--- a/Places.tex
+++ b/Places.tex
@@ -57,12 +57,12 @@
 		A port city on the northern coast of Haunya, N'Gulonga has grown 
 		in importance since the Northern Fires started.  With its proximity
 		to Ko' Rau, the city has become a popular destination for adventurers
-		on expeditions into the Burning North.  The port teems with all
+		on expeditions into the Burning North.  The port bustles with all
 		manner of travelers, merchants and adventurers, some heading into 
 		the northern continent, others carrying goods to the Temple of 
 		Iomedae.  Even though the Knights of the Relic rule over the city,
 		trade on the black market continues to grow.  In recent years, the 
-		unsavory trade of undead, devils and demons developed into a major 
+		unsavory trade of undead, devils, and demons developed into a major 
 		business.  
 
 			\paragraph{NPCs}
@@ -71,6 +71,21 @@
 			\paragraph{Shops}
 
 			\paragraph{Encounters}
+				
+				\begin{itemize}
+					\item Loose Undead or evil wizards from the 
+						ghoul market.
+					\item Local guards
+					\item Merchants
+				\end{itemize}
+
+			\paragraph{\textsc{Boss}:CR 8+}
+				\begin{itemize}
+					\item 1 Hungry Fog
+					\item 2-4 Shadows/Greater Shadows
+					\item 2-6 Zombies/Skeletons
+				\end{itemize}
+			
 	
 		\subsubsection{Tueha}
 
@@ -96,7 +111,7 @@
 							records in the storeroom under the
 							general store. 
 					\item \textsc{Talas}: The young owner of the local
-							general store, General Goods, acts as a 
+							general store acts as a 
 							go between for clients and the thieves 
 							guild.  Not a malicious individual,
 							usually offers his services to people he
@@ -107,8 +122,8 @@
 			\paragraph{Shops}
 
 				\begin{itemize}
-					\item \textsc{Lyon's Gate}
-					\item \textsc{S}
+					\item \textsc{Lyon's Gate Inn}
+					\item \textsc{Sweet Reprieve Tavern and Boarding House}
 					\item \textsc{General Goods}
 					\item \textsc{Blacksmith}
 					\item \textsc{Tanner}
@@ -117,7 +132,9 @@
 			\paragraph{Encounters}
 				\begin{itemize}
 					\item Merchants traveling between N'Gulonga
-						and Xicxil.
+						and Xicxil
+					\item Members of the Iron Band
+					\item Creatures from the surrounding grasslands
 				\end{itemize}
 				
 		\subsubsection{Mattu}
