Have been ingnoring the repo for some time and this is a mass update of pretty much everything.  Including some old character sheets done with sagetex.

--- a/People.tex
+++ b/People.tex
@@ -30,6 +30,7 @@
 
 		\textsc{Boons}
 		\begin{tabular}{| r | c | l}
+			\hline
 			1\%-50\% & DC 15 & He treats the party with indifference 
 						or even as interupting intruders. \\
  					& & Offers no important information about 
@@ -41,14 +42,19 @@
 						ritual and gives the party a letter of \\
 					& &	introduction to help them find people 
 						involved with the ritual. \\ 		
+			\hline
 		\end{tabular}
 
 	\subsection{Groups and Factions}
 
-		\subsubsection{The Iron Band}
+		\subsubsection{The Red Wizards}
 
-		\subsubsection{Red Wizards}
-	
+		\subsubsection{The Iron Band}
+			\paragraph{The House of Sorrow}
+			\paragraph{The House of Greed}
+			\paragraph{The House of Whispers}
+			\paragraph{The Grand Tower}
+
 		\subsubsection{Knights of Iomedae}
 
 		\subsubsection{Knights of the Relic}
