--- a/README
+++ b/README
@@ -21,6 +21,10 @@ Change log:
 -Added Iram of the Pillars and the Shifting Sands to the list of places.
 -Changed format for town description to description, NPC, Shops, and Encounters
 
+7/4/12
+-Pushing a mass update, shamefully have been ignoring the github repo, or any
+sort of version control.
+
 TODO:
 
 Add Map picture
