Added to README

--- a/README
+++ b/README
@@ -2,6 +2,9 @@ Pathfinder campaign:
 
 Change log:
 
+5/14/14
+-Cleaned up world map, added raw map image.
+
 6/16/13
 -Added world map base image
 
