--- a/src/Title.tex
+++ b/src/Title.tex
@@ -1,5 +1,4 @@
 \documentclass[a4paper]{article}
-\usepackage{fullpage}
 
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1pt\hfill \kern \z@}
@@ -38,5 +37,6 @@
 \maketitle
 \input{Intro}
 \input{Places}
+\input{POI}
 \input{People}
 \end{document}
