--- a/src/People.tex
+++ b/src/People.tex
@@ -3,10 +3,20 @@
 	\subsection{Important NPCs}
 
 		\subsubsection{Augustus XVII}
+			In the world of Antioc the might of the church and military are 
+			placed into the hands one man, the Archbishop--General.  As the 
+			current ruler of Antioc, Augustus XVII holds absolute power over
+			the affairs of the nation.  Selected by a meeting of the leaders
+			of the Knights of the Relic and Knights of Iomedae upon the death 
+			of the previous Archbishop, Augustus was chosen to lead the nation
+			after being decorated for his services as the commander of the Iron
+			Citadel.  Being no stranger to the horrors birthed in Ko' Rau,  
+			the new Archbishop--General has decided to throw the full might of 
+			Antioc against the evil continent.  After three years with no 
+			marked improvement, the Archbishop--General has made a plea for 
+			help to all the surrounding nations.
 
 		\subsubsection{The Masked Ones}
-
-		\subsubsection{Faust}
 			
 		\subsubsection{King Faerlag}
 
@@ -25,25 +35,30 @@
 		they now raid carrivans, hoping to catch a group transporting
 		some of the relics necessary for the Fires of Dis ritual.  He
 		can grant the party information or even a boon depending on how
-		he likes or gets a long with them.  A percentile or diplomacy 
+		much he likes the party.  A percentile or diplomacy 
 		check to decide. 
 
 		\textsc{Boons}
-		\begin{tabular}{| r | c | l}
+
+		\begin{tabularx}{\textwidth}{| X | X | X |}
 			\hline
 			1\%-50\% & DC 15 & He treats the party with indifference 
 						or even as interupting intruders. \\
  					& & Offers no important information about 
 						himself or the Red Wizards. \\
+			\hline
 			51\%-75\% & DC 25 & He might tell the party about the Red
 						Wizards as well as his own story \\ 
 					& & 	of exile. \\
+			\hline	
 			76\%-100\% & DC 35 & Tells the party of the Fires of Dis 
 						ritual and gives the party a letter of \\
 					& &	introduction to help them find people 
 						involved with the ritual. \\ 		
 			\hline
-		\end{tabular}
+		\end{tabularx}
+
+		\subsubsection{Faust}
 
 	\subsection{Groups and Factions}
 
