--- a/src/Places.tex
+++ b/src/Places.tex
@@ -11,6 +11,10 @@
 		\subsubsection{Northrun}
 	
 		\subsubsection{Algrem}
+		
+		\subsubsection{Ardsor}
+
+		\subsubsection{Eldver}
 
 	\subsection{Ryujin}
 
@@ -31,6 +35,18 @@
 		\subsubsection{Oshu}
 
 		\subsubsection{Toyama}
+
+		\subsubsection{Shima}
+
+		\subsubsection{Toyokuno}
+
+		\subsubsection{Takama}
+
+		\subsubsection{Inakan}
+
+		\subsubsection{Nagosu}
+
+		\subsubsection{Kitochi}
 
 	\subsection{Wolf Island}
 
