--- a/src/Title.tex
+++ b/src/Title.tex
@@ -1,5 +1,7 @@
 \documentclass[a4paper]{article}
 
+\usepackage{tabularx}
+
 \makeatletter
 \def\thickhrulefill{\leavevmode \leaders \hrule height 1pt\hfill \kern \z@}
 \renewcommand{\maketitle}{\begin{titlepage}%
