Added section to People about Braga, Last King of Ko' Rau

--- a/src/People.tex
+++ b/src/People.tex
@@ -22,21 +22,71 @@
 
 		\subsubsection{The Jade Lady}
 
+		\subsubsection{Braga Blackthorn, Last King of Ko' Rau}
+			Braga Blackthorn was the last king in a long line of dwarven rulers
+			in the north.  During the time of his rule, the world witnessed the 
+			fall of the greatest dwarven civilization to the first fires to 
+			consume the northern country.  When he was a young dwarf, Braga become 
+			the next King in the North when his father, Draga fell in battle 
+			against the Red Wizards.  At the height of the war, the dwarves found 
+			themselves in dire straights, with most of the their country overrun
+			and without a way to fight against the Wizards' powerful circle magic.
+			Braga brought together his best craftsmen and scholars to construct 
+			five powerful artifacts that would render circle magic useless.  He 
+			succeeded and sent one of each of these artifacts to the other capital
+			cities around the world creating a circle magic suppression field.  
+			Without the potency of their accursed magics, the residents of Ko' Rau
+			were able to push the Red Wizards back to their last stronghold, The 
+			Iron Tower.  Soon after the war ended, and Braga was considered the
+			hero of his people.  Several years later, on the day of the surrender
+			the capital city of Ko' Rau was consumed by unholy flames as the 
+			first Fires of Dis ritual was performed.  In the blast, Braga perished,
+			leaving behind only the holy amulet around his neck.  
+			
+			\textsc{Amulet of Braga}
+			
+			\begin{tabular}{| c | c | c |}
+				\hline
+				Neck & Strong Abjuration & Artifact \\
+				\hline
+			\end{tabular}
+			
+			The Amulet of Braga appears as a simple gold chain with the symbol of
+			Torag as the pendent.  When a person first puts on the Amulet, their 
+			soul is transported to the Grand Feasting Hall in old Ko' Rau.  At 
+			the head of the table sits Braga, usually enjoying a fine meal.  As
+			long as the wearer of the necklace is not evil or a Red Wizard, Braga
+			is always cordial to his guest.  Even when his guest is not to his 
+			liking, he is at least polite as his station dictates.  He is 
+			particularly fond of craftsmen and mages.  The introductory 
+			conversation takes 10 min, during which the wearers body sits still
+			in a trance, if they are disturbed the trance ends.  After wearing 
+			the amulet once, any wearer is aware of the amulets powers and how  to
+			trigger them.  
+			
+			\begin{itemize}
+				\item Wearer gains a passive +4 to crafting checks.  The wearer 
+				is a smith of any kind, this bonus increases to +8.  
+				\item The wearer gains fire resistance 20.
+				\item Once a day, the wearer can spend 10 min to commune with Braga
+				as per the \textit{commune} spell (CL 8).  
+			\end{itemize}
+
 	\subsection{Minor NPCs}
 
 		\subsubsection{Andor, The Man in Red}
 
-		Once a Red Wizard, Andor has been banished from the Iron Citadel
+		Once a Red Wizard, Andor has been banished from the Iron Tower
 		for speaking out against the yearly rituals and now lives atop
 		a mountain on Haunya.  The local goblin tribe have adopted his
 		Iron Band tattoo as their new crest and revere him as a wise 
 		and powerful man.  Since the goblins live close to a mountain
 		pass used frequently by the Thieves Guild as a smuggling route,
 		they now raid carrivans, hoping to catch a group transporting
-		some of the relics necessary for the Fires of Dis ritual.  He
-		can grant the party information or even a boon depending on how
-		much he likes the party.  A percentile or diplomacy 
-		check to decide. 
+		some of the relics necessary for the Fires of Dis ritual, which
+		is often referred to as 'Braga's Curse'.  He can grant the party 
+		information or even a boon depending on how much he likes the 
+		party.  A percentile or diplomacy check to decide.  
 
 		\textsc{Boons}
 
