Updated events, and added Dwarven clans to People

--- a/src/People.tex
+++ b/src/People.tex
@@ -129,4 +129,16 @@
 		\subsubsection{Lords of the Solid Hand}
 
 		\subsubsection{The Keepers}
+		
+		\subsubsection{Clan Lochlann}
+			Crafters wonderous items
+
+		\subsubsection{Clan Sinclair}
+			Sorcerers, dragon and abberation bloodlines
+
+		\subsubsection{Clan BlackWood}
+			Arms and armor. pragmatic.
+
+		\subsubsection{Clan Mulloy}
+			Merchants.
 
